--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
+    "react-bandcamp": "^1.1.5",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
     "react-spotify-player": "^1.0.4",
+    "sass": "^1.69.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
